# disco-vault

./: .gitignore  Makefile  README.md  disco-vault.desktop.in  ndisc.desktop.in  package-lock.json  package.json  tailwind.config.ts
.github/workflows/: release.yml
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/components/: AddReleaseForm.tsx  ImportPanel.tsx  LibraryPanel.tsx  NostrPanel.tsx  ReleaseDetail.tsx  ReleaseList.tsx  Section.tsx  StatsPanel.tsx
src/lib/: buttonStyles.ts  cover.ts  tauri.ts
