[package]
name = "disco-vault"
version = "0.1.0"
description = "Music discography library — physical & digital releases, with Nostr sharing"
authors = ["xjmzx"]
edition = "2021"

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "disco_vault_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Bundled SQLite — vendors libsqlite3 with the build, so no system dep needed.
rusqlite = { version = "0.32", features = ["bundled"] }
